--- a/MapApp/public/partials/addForm.html
+++ b/MapApp/public/partials/addForm.html
@@ -18,7 +18,7 @@
                 <!-- Text Boxes and Other User Inputs. Note ng-model binds the values to Angular $scope -->
                 <div class="form-group">
                     <label for="username">Bathroom Name <span class="badge">All fields required</span></label>
-                    <input type="text" class="form-control" id="username" placeholder="OldandGold" ng-model="formData.username" required>
+                    <input type="text" class="form-control" id="username" placeholder="Jack in the Box" ng-model="formData.username" required>
                 </div>
                 <label class="radio control-label">Bathroom Gender-type</label>
                 <div class="radio">
@@ -35,11 +35,11 @@
                 </div>
                 <div class="form-group">
                     <label for="latitude">Latitude</label>
-                    <input type="text" class="form-control" id="latitude" value="39.500" ng-model="formData.latitude" readonly>
+                    <input type="text" class="form-control" id="latitude" value="37.3351" ng-model="formData.latitude" readonly>
                 </div>
                 <div class="form-group">
                     <label for="longitude">Longitude</label>
-                    <input type="text" class="form-control" id="longitude" value="-98.350" ng-model="formData.longitude" readonly>
+                    <input type="text" class="form-control" id="longitude" value="121.8929" ng-model="formData.longitude" readonly>
                 </div>
 
                 <!-- Submit button. Note that its tied to createUser() function from addCtrl. Also note ng-disabled logic which prevents early submits.  -->
