google maps navigate

--- a/MapApp/public/partials/addForm.html
+++ b/MapApp/public/partials/addForm.html
@@ -33,6 +33,12 @@
                         Female
                     </label>
                 </div>
+                <div class="radio" required>
+                    <label>
+                        <input type="radio" name="optionsRadios" id="radiounisex" value="Unisex" ng-model="formData.gender">
+                        Unisex
+                    </label>
+                </div>
                 <div class="form-group">
                     <label for="latitude">Latitude</label>
                     <input type="text" class="form-control" id="latitude" value="37.3351" ng-model="formData.latitude" readonly>
