--- a/MapApp/public/partials/queryForm.html
+++ b/MapApp/public/partials/queryForm.html
@@ -40,6 +40,10 @@
                         <input type="checkbox" name="optionsRadios" id="checkfemale" value="Female" ng-model="formData.female" ng-true-value="'Female'">
                         Female
                     </label>
+                    <label class="checkbox-inline">
+                        <input type="checkbox" name="optionsRadios" id="checkunisex" value="Unisex" ng-model="formData.unisex" ng-true-value="'Unisex'">
+                        Unisex
+                    </label>
                 </div>
 
                 <!-- Query button. Note that its tied to queryUsers() function from queryCtrl.  -->
