--- a/MapApp/public/partials/queryForm.html
+++ b/MapApp/public/partials/queryForm.html
@@ -45,14 +45,29 @@
                         Unisex
                     </label>
                 </div>
-                <label class="radio control-label">Bathroom Rating</label>
-                <select name="bathroomRating" ng-model="formData.rating">
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                </select>
+                <label>Bathroom Rating</label>
+                <div class="form-group">
+                    <label class="checkbox-inline">
+                        <input type="checkbox" name="optionsRadios" id="check1" value="1" ng-model="formData.one" ng-true-value = "'One'">
+                        1
+                    </label>
+                    <label class="checkbox-inline">
+                        <input type="checkbox" name="optionsRadios" id="check2" value="2" ng-model="formData.two" ng-true-value="'Two'">
+                        2
+                    </label>
+                    <label class="checkbox-inline">
+                        <input type="checkbox" name="optionsRadios" id="check3" value="3" ng-model="formData.three" ng-true-value="'Three'">
+                        3
+                    </label>
+                    <label class="checkbox-inline">
+                        <input type="checkbox" name="optionsRadios" id="check4" value="4" ng-model="formData.four" ng-true-value="'Four'">
+                        4
+                    </label>
+                    <label class="checkbox-inline">
+                        <input type="checkbox" name="optionsRadios" id="check5" value="5" ng-model="formData.five" ng-true-value="'Five'">
+                        5
+                    </label>
+                </div>
                 <!-- Query button. Note that its tied to queryUsers() function from queryCtrl.  -->
                 <button type="submit" class="btn btn-danger btn-block" ng-click="queryUsers()">Search</button>
             </form>
