--- a/MapApp/public/partials/addForm.html
+++ b/MapApp/public/partials/addForm.html
@@ -40,13 +40,36 @@
           </label>
         </div>
         <label class="radio control-label">Bathroom Rating</label>
-        <select name="bathroomRating" ng-model="formData.rating">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-        </select>
+        <div class="radio">
+          <label>
+            <input type="radio" name="optionsRadios" id="radio1" value="1" ng-model="formData.rating">
+            1
+          </label>
+        </div>
+        <div class="radio" required>
+          <label>
+            <input type="radio" name="optionsRadios" id="radio2" value="2" ng-model="formData.rating">
+            2
+          </label>
+        </div>
+        <div class="radio" required>
+          <label>
+            <input type="radio" name="optionsRadios" id="radio3" value="3" ng-model="formData.rating">
+            3
+          </label>
+        </div>
+        <div class="radio" required>
+          <label>
+            <input type="radio" name="optionsRadios" id="radio4" value="4" ng-model="formData.rating">
+            4
+          </label>
+          <div class="radio" required>
+            <label>
+              <input type="radio" name="optionsRadios" id="radio5" value="5" ng-model="formData.rating">
+              5
+            </label>
+          </div>
+        </div>
         <div class="form-group">
           <label for="latitude">Latitude</label>
           <input type="text" class="form-control" id="latitude" value="37.3351" ng-model="formData.latitude" readonly>
