--- a/MapApp/public/style.css
+++ b/MapApp/public/style.css
@@ -3,3 +3,16 @@
     height: 645px;
     width: 645px;
 }
+input:valid + span:after {
+    content: '✓';
+    color: #26b72b;
+    padding-left: 5px;
+}
+input:invalid + span:after {
+    content: '✖';
+    color: #f00;
+    padding-left: 5px;
+}
+#rating{
+  width: 43%;
+}
