--- a/MapApp/public/partials/queryForm.html
+++ b/MapApp/public/partials/queryForm.html
@@ -1,81 +1,61 @@
 <!-- Find Teammates (Query) Form -->
 <div class="col-md-5">
 
-    <!-- Creates Main Panel -->
-    <div class="panel panel-default">
+  <!-- Creates Main Panel -->
+  <div class="panel panel-default">
 
-        <!-- Panel Title -->
-        <div class="panel-heading">
-            <h2 class="panel-title text-center">Find Bathrooms!<span class="glyphicon glyphicon-search"></span></h2>
-        </div>
-
-        <!-- Panel Body -->
-        <div class="panel-body">
-
-            <!-- Creates Form -->
-            <form name ="queryForm">
-
-                <!-- Text Boxes and Other User Inputs. Note ng-model binds the values to Angular $scope -->
-                <div class="form-group">
-                    <label for="latitude">Your Latitude</label>
-                    <input type="text" class="form-control" id="latitude" placeholder="37.3351" ng-model="formData.latitude" readonly>
-                </div>
-                <div class="form-group">
-                    <label for="longitude">Your Longitude</label>
-                    <input type="text" class="form-control" id="longitude" placeholder="-121.8929" ng-model="formData.longitude" readonly>
-                </div>
-                <div class="form-group">
-                    <label for="distance">Max. Distance (miles)</label>
-                    <input type="text" class="form-control" id="distance" placeholder="5" ng-model="formData.distance">
-                </div>
-
-                <!-- Note ng-true-value which translates check values into explicit gender strings -->
-                <label>Bathroom Gender-type</label>
-                <div class="form-group">
-                    <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="checkmale" value="Male" ng-model="formData.male" ng-true-value = "'Male'">
-                        Male
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="checkfemale" value="Female" ng-model="formData.female" ng-true-value="'Female'">
-                        Female
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="checkunisex" value="Unisex" ng-model="formData.unisex" ng-true-value="'Unisex'">
-                        Unisex
-                    </label>
-                </div>
-                <label>Bathroom Rating</label>
-                <div class="form-group">
-                    <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="check1" value="1" ng-model="formData.one" ng-true-value = "'One'">
-                        1
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="check2" value="2" ng-model="formData.two" ng-true-value="'Two'">
-                        2
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="check3" value="3" ng-model="formData.three" ng-true-value="'Three'">
-                        3
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="check4" value="4" ng-model="formData.four" ng-true-value="'Four'">
-                        4
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="check5" value="5" ng-model="formData.five" ng-true-value="'Five'">
-                        5
-                    </label>
-                </div>
-                <!-- Query button. Note that its tied to queryUsers() function from queryCtrl.  -->
-                <button type="submit" class="btn btn-danger btn-block" ng-click="queryUsers()">Search</button>
-            </form>
-        </div>
-
-        <!-- Footer panel for displaying count. Note how it will only display if queryCount is greater than 0 -->
-        <div ng-show="queryCount>0" class="panel-footer">
-            <p class="text-center">We Found {{queryCount}} Bathrooms!</p>
-        </div>
+    <!-- Panel Title -->
+    <div class="panel-heading">
+      <h2 class="panel-title text-center">Find Bathrooms!<span class="glyphicon glyphicon-search"></span></h2>
     </div>
+
+    <!-- Panel Body -->
+    <div class="panel-body">
+
+      <!-- Creates Form -->
+      <form name="queryForm">
+
+        <!-- Text Boxes and Other User Inputs. Note ng-model binds the values to Angular $scope -->
+        <div class="form-group">
+          <label for="latitude">Your Latitude</label>
+          <input type="text" class="form-control" id="latitude" placeholder="37.3351" ng-model="formData.latitude" readonly>
+        </div>
+        <div class="form-group">
+          <label for="longitude">Your Longitude</label>
+          <input type="text" class="form-control" id="longitude" placeholder="-121.8929" ng-model="formData.longitude" readonly>
+        </div>
+        <div class="form-group">
+          <label for="distance">Max. Distance (miles)</label>
+          <input type="text" class="form-control" id="distance" placeholder="5" ng-model="formData.distance">
+        </div>
+
+        <!-- Note ng-true-value which translates check values into explicit gender strings -->
+        <label>Bathroom Gender-type</label>
+        <div class="form-group">
+          <label class="checkbox-inline">
+            <input type="checkbox" name="optionsRadios" id="checkmale" value="Male" ng-model="formData.male" ng-true-value="'Male'">
+            Male
+          </label>
+          <label class="checkbox-inline">
+            <input type="checkbox" name="optionsRadios" id="checkfemale" value="Female" ng-model="formData.female" ng-true-value="'Female'">
+            Female
+          </label>
+          <label class="checkbox-inline">
+            <input type="checkbox" name="optionsRadios" id="checkunisex" value="Unisex" ng-model="formData.unisex" ng-true-value="'Unisex'">
+            Unisex
+          </label>
+        </div>
+        <label for="rating">Bathroom Rating</label>
+        <input type="number" id="rating" placeholder="Min: 1, max: 5" min="1" max="5" ng-model="formData.rating">
+        <span class="validity"></span>
+        <!-- Query button. Note that its tied to queryUsers() function from queryCtrl.  -->
+        <button type="submit" class="btn btn-danger btn-block" ng-click="queryUsers()">Search</button>
+      </form>
+    </div>
+
+    <!-- Footer panel for displaying count. Note how it will only display if queryCount is greater than 0 -->
+    <div ng-show="queryCount>0" class="panel-footer">
+      <p class="text-center">We Found {{queryCount}} Bathrooms!</p>
+    </div>
+  </div>
 </div>
