make google maps responsive

--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,16 @@
 /* Google Map! */
 #map {
-    height: 645px;
-    width: 645px;
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+  left:0;
+   top:0;
+   height:100%;
+   width:100%;
+}
+#responsivePanel{
+  
 }
 input:valid + span:after {
     content: '✓';
