--- a/public/partials/addForm.html
+++ b/public/partials/addForm.html
@@ -23,7 +23,7 @@
         <label>Bathroom Gender-type</label>
         <div class="form-group" required>
           <label class="radio-inline">
-            <input type="radio" name="optionsRadios" id="radiomale" value="Male" ng-model="formData.gender">
+            <input type="radio" name="optionsRadios" id="radiomale" value="Male" ng-model="formData.gender" required>
             Male
           </label>
 
@@ -42,11 +42,11 @@
         </div>
 
 
-        <div class="form-group" required>
+
           <label for="rating">Bathroom Rating</label>
-          <input type="number" id="rating" name="rating" ng-model="formData.rating" placeholder="Min: 1, max: 5" min="1" max="5" />
+          <input type="number" id="rating" name="rating" ng-model="formData.rating" placeholder="Min: 1, max: 5" min="1" max="5" required/>
           <span class="validity"></span>
-        </div>
+
 
         <div class="form-group">
           <label for="latitude">Latitude</label>
