--- a/public/style.css
+++ b/public/style.css
@@ -1,30 +1,33 @@
 /* Google Map! */
 #map {
-  overflow:hidden;
-  padding-bottom:56.25%;
-  position:relative;
-  height:0;
-  left:0;
-   top:0;
-   height:100%;
-   width:100%;
+  overflow: hidden;
+  padding-bottom: 100%;
+  position: relative;
+  height: 0;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
 }
-#responsivePanel{
-  
+
+#responsivePanel {}
+
+input:valid+span:after {
+  content: '✓';
+  color: #26b72b;
+  padding-left: 5px;
 }
-input:valid + span:after {
-    content: '✓';
-    color: #26b72b;
-    padding-left: 5px;
+
+input:invalid+span:after {
+  content: '✖';
+  color: #f00;
+  padding-left: 5px;
 }
-input:invalid + span:after {
-    content: '✖';
-    color: #f00;
-    padding-left: 5px;
-}
-#rating{
+
+#rating {
   width: 43%;
 }
-.linkless{
+
+.linkless {
   text-decoration: none;
 }
