--- a/public/partials/rateForm.html
+++ b/public/partials/rateForm.html
@@ -16,8 +16,8 @@
       <form name="rateForm" novalidate>
         <button type="submit" class="btn btn-success" ng-click="refresh()">My Location</button>
         <div class="form-group">
-          <label for="id">Bathroom ID<span class="badge">All fields required</span></label>
-          <input type="text" class="form-control" id="id" name="id" placeholder="Click on bathroom from map to view ID" ng-model="formData.id" required>
+          <label for="bathroomName">Bathroom Name <span class="badge">All fields required</span></label>
+          <input type="text" class="form-control" id="bathroomName" name="bathroomName" placeholder="Click on bathroom from map to name" ng-model="formData.bathroomName" required>
         </div>
         <div class="form-group">
           <label for="rating">Bathroom Rating</label>
