took out long and lat

--- a/public/partials/addForm.html
+++ b/public/partials/addForm.html
@@ -49,7 +49,7 @@
           <span class="validity"></span>
 
 
-        <div class="form-group">
+        <div hidden="false" class="form-group">
           <label for="latitude">Latitude</label>
           <input type="text" class="form-control" id="latitude" value="37.3351" ng-model="formData.latitude" readonly>
 
