--- a/public/partials/queryForm.html
+++ b/public/partials/queryForm.html
@@ -16,11 +16,11 @@
       <form name="queryForm">
         <button type="submit" class="btn btn-primary" ng-click="refresh()">My Location</button>
         <!-- Text Boxes and Other User Inputs. Note ng-model binds the values to Angular $scope -->
-        <div class="form-group">
+        <div hidden="false" class="form-group">
           <label for="latitude">Your Latitude</label>
           <input type="text" class="form-control" id="latitude" placeholder="37.3351" ng-model="formData.latitude" readonly>
         </div>
-        <div class="form-group">
+        <div hidden="false" class="form-group">
           <label for="longitude">Your Longitude</label>
           <input type="text" class="form-control" id="longitude" placeholder="-121.8929" ng-model="formData.longitude" readonly>
         </div>
