Revert "fix refresh bug"
This reverts commit 7acab0db822c97301d015349d2a79304d10112ad.

--- a/public/partials/queryForm.html
+++ b/public/partials/queryForm.html
@@ -26,7 +26,7 @@
         </div>
         <div class="form-group">
           <label for="distance">Max. Distance (miles)</label>
-          <input type="text" class="form-control" id="distance" name="distance" ng-init="formData.distance='5'" ng-model="formData.distance">
+          <input type="text" class="form-control" id="distance" placeholder="5" ng-model="formData.distance">
         </div>
 
         <!-- Note ng-true-value which translates check values into explicit gender strings -->
