--- a/public/partials/queryForm.html
+++ b/public/partials/queryForm.html
@@ -6,7 +6,7 @@
 
     <!-- Panel Title -->
     <div class="panel-heading">
-      <h2 class="panel-title text-center">Find Bathrooms!<span class="glyphicon glyphicon-search"></span></h2>
+      <h2 class="panel-title text-center">Find Bathrooms! <span class="glyphicon glyphicon-search"></span></h2>
     </div>
 
     <!-- Panel Body -->
@@ -14,7 +14,7 @@
 
       <!-- Creates Form -->
       <form name="queryForm">
-        <button type="submit" class="btn btn-primary" ng-click="refresh()">My Location</button>
+        <button type="submit" class="btn btn-danger" ng-click="refresh()">My Location</button>
         <!-- Text Boxes and Other User Inputs. Note ng-model binds the values to Angular $scope -->
         <div hidden="false" class="form-group">
           <label for="latitude">Your Latitude</label>
@@ -49,7 +49,7 @@
         <input class="form-control" type="number" id="avgRating" placeholder="Min: 1, max: 5" min="1" max="5" ng-model="formData.avgRating">
         <span class="validity"></span>
         <!-- Query button. Note that its tied to queryUsers() function from queryCtrl.  -->
-        <button type="submit" class="btn btn-primary btn-block" ng-click="queryUsers()">Search</button>
+        <button type="submit" class="btn btn-danger btn-block" ng-click="queryUsers()">Find</button>
       </form>
     </div>
 
