fix latitude and longitude bug

--- a/public/partials/queryForm.html
+++ b/public/partials/queryForm.html
@@ -16,7 +16,7 @@
       <form name="queryForm">
         <button type="submit" class="btn btn-danger" ng-click="refresh()">My Location</button>
         <!-- Text Boxes and Other User Inputs. Note ng-model binds the values to Angular $scope -->
-        <div hidden="false" class="form-group">
+        <div class="form-group">
           <label for="latitude">Your Latitude</label>
           <input type="text" class="form-control" id="latitude" placeholder="37.3351" ng-model="formData.latitude" readonly>
         </div>
