Hide latitude and longitude from user

--- a/public/partials/addForm.html
+++ b/public/partials/addForm.html
@@ -43,7 +43,7 @@
         <label for="rating">Bathroom Rating</label>
         <input class="form-control" type="number" id="rating" name="rating" ng-model="formData.rating" placeholder="Min: 1, max: 5" min="1" max="5" required>
         <span class="validity"></span>
-        <div class="form-group">
+        <div hidden="false" class="form-group">
           <label for="latitude">Latitude</label>
           <input type="text" class="form-control" id="latitude" value="37.3351" ng-model="formData.latitude" readonly>
 
